fix careers spacing

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -99,3 +99,6 @@ main
   flex: 1
   p
     font-size: 18px
+
+strong
+  font-weight: 600
